--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-dark">
         <div class="container">
             <div class="logo">
-                <h1>🏦 BankHub</h1>
+                <h1>BankHub</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="dashboard.html" class="active">Dashboard</a></li>
@@ -53,17 +53,17 @@
                 <h2>Quick Actions</h2>
                 <div class="actions-grid">
                     <a href="deposit.html" class="action-card">
-                        <div class="action-icon">💳</div>
+                        <div class="action-icon"></div>
                         <h4>Deposit Money</h4>
                         <p>Add funds to your account</p>
                     </a>
                     <a href="withdraw.html" class="action-card">
-                        <div class="action-icon">💸</div>
+                        <div class="action-icon"></div>
                         <h4>Withdraw Money</h4>
                         <p>Withdraw from your account</p>
                     </a>
                     <a href="profile.html" class="action-card">
-                        <div class="action-icon">👤</div>
+                        <div class="action-icon"></div>
                         <h4>Edit Profile</h4>
                         <p>Update your account details</p>
                     </a>
