--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <h1>🏦 BankHub</h1>
+                <h1>BankHub</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
@@ -30,34 +30,6 @@
             </div>
         </div>
     </div>
-
-    <section class="features">
-        <div class="container">
-            <h2>Why Choose BankHub?</h2>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="icon">💳</div>
-                    <h3>Easy Registration</h3>
-                    <p>Quick and secure registration process with verified credentials</p>
-                </div>
-                <div class="feature-card">
-                    <div class="icon">🔐</div>
-                    <h3>Secure Login</h3>
-                    <p>Advanced security features to protect your account</p>
-                </div>
-                <div class="feature-card">
-                    <div class="icon">💰</div>
-                    <h3>Deposit & Withdraw</h3>
-                    <p>Easy deposit and withdrawal of funds</p>
-                </div>
-                <div class="feature-card">
-                    <div class="icon">⚙️</div>
-                    <h3>Profile Management</h3>
-                    <p>Update your account details anytime</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <footer class="footer">
         <p>&copy; 2026 BankHub. All rights reserved.</p>
