--- a/withdraw.html
+++ b/withdraw.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-dark">
         <div class="container">
             <div class="logo">
-                <h1>🏦 BankHub</h1>
+                <h1>BankHub</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="dashboard.html">Dashboard</a></li>
